file/cmd.txt
Microsoft Windows [版本 6.3.9600]
(c) 2013 Microsoft Corporation。保留所有权利。

C:\Users\xubo601450868>
C:\Users\xubo601450868>scala
Welcome to Scala version 2.9.2 (Java HotSpot(TM) 64-Bit Server VM, Java 1.7.0_79
).
Type in expressions to have them evaluated.
Type :help for more information.

scala>

scala>

scala>

scala>

scala> 1 to 9
res0: scala.collection.immutable.Range.Inclusive = Range(1, 2, 3, 4, 5, 6, 7, 8,
 9)

scala> (1 to 9).map("*" * _).foreach(println)
*
**
***
****
*****
******
*******
********
*********

scala>

scala> (1 to 9).map("*" * _).foreach(println _)
*
**
***
****
*****
******
*******
********
*********

scala> (1 to 19).map("*" * _).foreach(println _)
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************

scala> (1 to 19).map("-*-" * _).foreach(println _)
-*-
-*--*-
-*--*--*-
-*--*--*--*-
-*--*--*--*--*-
-*--*--*--*--*--*-
-*--*--*--*--*--*--*-
-*--*--*--*--*--*--*--*-
-*--*--*--*--*--*--*--*--*-
-*--*--*--*--*--*--*--*--*--*-
-*--*--*--*--*--*--*--*--*--*--*-
-*--*--*--*--*--*--*--*--*--*--*--*-
-*--*--*--*--*--*--*--*--*--*--*--*--*-
-*--*--*--*--*--*--*--*--*--*--*--*--*--*-
-*--*--*--*--*--*--*--*--*--*--*--*--*--*--*-
-*--*--*--*--*--*--*--*--*--*--*--*--*--*--*--*-
-*--*--*--*--*--*--*--*--*--*--*--*--*--*--*--*--*-
-*--*--*--*--*--*--*--*--*--*--*--*--*--*--*--*--*--*-
-*--*--*--*--*--*--*--*--*--*--*--*--*--*--*--*--*--*--*-

scala> (1 to 19).map("-*" * _).foreach(println _)
-*
-*-*
-*-*-*
-*-*-*-*
-*-*-*-*-*
-*-*-*-*-*-*
-*-*-*-*-*-*-*
-*-*-*-*-*-*-*-*
-*-*-*-*-*-*-*-*-*
-*-*-*-*-*-*-*-*-*-*
-*-*-*-*-*-*-*-*-*-*-*
-*-*-*-*-*-*-*-*-*-*-*-*
-*-*-*-*-*-*-*-*-*-*-*-*-*
-*-*-*-*-*-*-*-*-*-*-*-*-*-*
-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*

scala> (1 to 19).map("-*" * _).foreach(println _)
-*
-*-*
-*-*-*
-*-*-*-*
-*-*-*-*-*
-*-*-*-*-*-*
-*-*-*-*-*-*-*
-*-*-*-*-*-*-*-*
-*-*-*-*-*-*-*-*-*
-*-*-*-*-*-*-*-*-*-*
-*-*-*-*-*-*-*-*-*-*-*
-*-*-*-*-*-*-*-*-*-*-*-*
-*-*-*-*-*-*-*-*-*-*-*-*-*
-*-*-*-*-*-*-*-*-*-*-*-*-*-*
-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*

scala> (1 to 19).map(_ * _).foreach(println _)
<console>:8: error: wrong number of parameters; expected = 1
              (1 to 19).map(_ * _).foreach(println _)
                              ^

scala> println((1 to 9).reduceleft(_ * _))
<console>:8: error: value reduceleft is not a member of scala.collection.immutab
le.Range.Inclusive
              println((1 to 9).reduceleft(_ * _))
                               ^

scala> println((1 to 9).reduceLeft(_ * _))
362880

scala> println((1 to 2).reduceLeft(_ * _))
2

scala> println((1 to 3).reduceLeft(_ * _))
6

scala> println((1 to 4).reduceLeft(_ * _))
24

scala> println((1 to 5).reduceLeft(_ * _))
120

scala> println((1 to 6).reduceLeft(_ * _))
720

scala> "spark is the most exciting thing happening in big data today".split(" ")
.sortWith(_.length < _.length).foreach(println)
is
in
the
big
most
data
spark
thing
today
exciting
happening

scala>